--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -7,7 +7,20 @@
 	= csrf_meta_tags
 
 %body
-	- flash.each do |name, msg|
-		= content_tag :div, msg, class: "alert alert-info"
+	%nav.navbar.navbar-default
+		.container
+			.navbar-brand= link_to "Pinterest", root_path
 
-	= yield
+			- if user_signed_in?
+				%ul.nav.navbar-nav.navbar-right
+					%li= link_to "New Recipe", new_pin_path
+					%li= link_to "Account", edit_user_registration_path
+					%li= link_to "Sign Out", destroy_user_session_path, method: :delete
+			- else
+				%ul.nav.navbar-nav.navbar-right
+					%li= link_to "Sign Up", new_user_registration_path
+					%li= link_to "Sign In", new_user_session_path
+	.container
+		- flash.each do |name, msg|
+			= content_tag :div, msg, class: "alert alert-info"
+		= yield
