--- a/app/views/pins/_form.html.haml
+++ b/app/views/pins/_form.html.haml
@@ -7,14 +7,23 @@
 			%ul
 				- @pin.errors.full_messages.each do |msg|
 					%li= msg
+
+	.form-group
+		= f.label :image
+		%br/
+		= f.file_field :image, class: "form-control"
+
 	.form-group
 		= f.label :title
 		%br/
-		= f.text_field :title, class: "form-group"
+		= f.text_field :title, class: "form-control"
 
 	.form-group
 		= f.label :description
 		%br/
-		= f.text_area :description, class: "form-group"
+		= f.text_area :description, class: "form-control"
 
 	= f.submit class: "btn btn-primary"
+
+
+	
