--- a/app/views/pins/index.html.haml
+++ b/app/views/pins/index.html.haml
@@ -1,6 +1,8 @@
-%h1 This is the index page
-
-= link_to "New Pin", new_pin_path
-
-- @pins.each do |pin|
-	%h2= link_to pin.title, pin
+#pins.transitions-enabled
+	- @pins.each do |pin|
+		.box.panel.panel-default
+			= link_to (image_tag pin.image.url), pin
+			%h2= link_to pin.title, pin
+			%p.user
+				Submitted by
+				= pin.user.email
