--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -31,7 +31,7 @@
 			font-weight: bold;
 			&:hover {
 				text-decoration: none;
-				background-color: aquamarine;
+				background-color: steelblue;
 			}
 		}
 	}
